--- a/cold_call.ipynb
+++ b/cold_call.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "other error\n"
+     ]
+    }
+   ],
    "source": [
     "# cold_call.ipynb\n",
     "# created by Rachel Orey, Fall 2024\n",
@@ -26,10 +34,13 @@
     "absent_students = input(\"Provide the first names of absent students: \").split(\",\")\n",
     "\n",
     "if len(absent_students) > 1:\n",
-    "    for absent_student in absent_students:\n",
-    "        first_names.remove(absent_student)\n",
-    "    else:\n",
-    "        print(\"No absent students reported.\")"
+    "    try:\n",
+    "        for absent_student in absent_students:\n",
+    "            first_names.remove(absent_student)\n",
+    "        else:\n",
+    "            print(\"No absent students reported.\")\n",
+    "    except:\n",
+    "        print(\"other error\")"
    ]
   },
   {
