--- a/lecture/week-6/functions.ipynb
+++ b/lecture/week-6/functions.ipynb
@@ -17,11 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define a function -- hello_world -- with no arguments, print \"Hello, World!\"\n"
+    "# define a function -- hello_world -- with no arguments, print \"Hello, World!\"\n",
+    "\n",
+    "def hello_world():\n",
+    "    print(\"Hello, world!\")"
    ]
   },
   {
@@ -33,11 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world! It's 6:03pm\n"
+     ]
+    }
+   ],
    "source": [
-    "# call the function\n"
+    "# call the function\n",
+    "hello_world()"
    ]
   },
   {
@@ -49,11 +61,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'print_today' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# define simple function print \"Today is October 7th\"\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mprint_today\u001b[49m()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprint_today\u001b[39m():\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mToday is October 7th\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'print_today' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# define simple function print \"Today is October 7th\"\n"
+    "# define simple function print \"Today is October 7th\"\n",
+    "\n",
+    "print_today()\n",
+    "\n",
+    "def print_today():\n",
+    "    print(\"Today is October 7th\")"
    ]
   },
   {
@@ -65,11 +94,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a function -- hello_four -- that prints \"Hello, world!\" four times"
+    "# create a function -- hello_four -- that prints \"Hello, world!\" four times\n",
+    "\n",
+    "def hello_four():\n",
+    "    for i in range(4):  \n",
+    "        hello_world()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n",
+      "Hello, world!\n",
+      "Hello, world!\n",
+      "Hello, world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello_four()"
    ]
   },
   {
@@ -88,20 +141,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define simple function -- times_two -- to print the input value multiplied by two\n"
+    "# define simple function -- times_two -- to print the input value multiplied by two\n",
+    "\n",
+    "def times_two(x):\n",
+    "    print(x*2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# call the function\n"
+    "# call the function\n",
+    "\n",
+    "times_two(3)"
    ]
   },
   {
@@ -113,11 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "times_two() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calling a function with the wrong number of arguments will result in an error\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtimes_two\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: times_two() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
    "source": [
-    "# Calling a function with the wrong number of arguments will result in an er"
+    "# Calling a function with the wrong number of arguments will result in an error\n",
+    "times_two(2,3)"
    ]
   },
   {
@@ -129,13 +208,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def message(year):\n",
     "    s = f\"The year is {year}\"\n",
     "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The year is 2010\n"
+     ]
+    }
+   ],
+   "source": [
+    "message(2010)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'year' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43myear\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'year' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "year"
    ]
   },
   {
@@ -147,11 +264,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add day to message"
+    "# add day to message\n",
+    "def message(year,day):\n",
+    "    s = f\"The year is {year} and the day of week is {day}\"\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The year is 2010 and the day of week is Monday\n"
+     ]
+    }
+   ],
+   "source": [
+    "message(2010,\"Monday\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The year is Monday and the day of week is 2010\n"
+     ]
+    }
+   ],
+   "source": [
+    "#order matters!\n",
+    "message(\"Monday\",2010)"
    ]
   },
   {
@@ -183,18 +338,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The year is 1910 and the day of week is Monday\n"
+     ]
+    }
+   ],
    "source": [
-    "message(day = 20, year = 1910)"
+    "message(day = \"Monday\", year = 1910)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (3580922907.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    message(day = 20, year)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
    "source": [
     "# once you use one keyword argument, all that follow have to be keyword too \n",
     "message(day = 20, year)"
@@ -210,18 +382,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Alice\n"
+     ]
+    }
+   ],
    "source": [
     "def greet(name, greeting=\"Hello\"):\n",
     "    print(greeting, name)\n",
     "\n",
     "# calling greet with both arguments\n",
-    "greet(\"Alice\", \"Hi\")\n",
-    "\n",
+    "greet(\"Alice\", \"Hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Bob\n"
+     ]
+    }
+   ],
+   "source": [
     "# calling greet with only the 'name' argument\n",
     "greet(\"Bob\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "parameter without a default follows parameter with a default (3179188158.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[33], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def greet(name, greeting=\"Hello\",last_name):\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m parameter without a default follows parameter with a default\n"
+     ]
+    }
+   ],
+   "source": [
+    "# required parameters have to be listed before default parameters\n",
+    "def greet(name, greeting=\"Hello\",last_name):\n",
+    "    print(greeting, name)"
    ]
   },
   {
@@ -238,11 +453,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adjust times_two function to RETURN value"
+    "# adjust times_two function to RETURN value\n",
+    "\n",
+    "def times_two(x):\n",
+    "    print(x*2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# can't do anything with print\n",
+    "\n",
+    "return_value = times_two(5)\n",
+    "\n",
+    "type(return_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adjust times_two function to RETURN value\n",
+    "\n",
+    "def times_two(x):\n",
+    "    return x*2\n",
+    "\n",
+    "return_value = times_two(5)\n",
+    "\n",
+    "print(f\"This is the {return_value}\")"
    ]
   },
   {
@@ -254,11 +527,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# return original and multiplied value"
+    "# return original and multiplied value\n",
+    "\n",
+    "def times_two(x):\n",
+    "    return x, x*2, x*4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 100, 200)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "times_two(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#can select return values\n",
+    "times_two_return = times_two(50)\n",
+    "\n",
+    "times_two_return[1]"
    ]
   },
   {
@@ -270,10 +589,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def times_two(x):\n",
+    "    return x, x*2, x*4\n",
+    "    print(\"Testing what happens next\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 10, 20)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "times_two(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,11 +634,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's create a more detailed function signature for times_two"
+    "# let's create a more detailed function signature for times_two\n",
+    "def times_two(x: int) -> int:\n",
+    "    return x*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "times_two(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'testtest'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# suggested type not binding\n",
+    "times_two(\"test\")"
    ]
   },
   {
@@ -309,11 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now let's add a docstring\n"
+    "# now let's add a docstring\n",
+    "def times_two(x: int) -> int:\n",
+    "    \"\"\"\n",
+    "    This function takes an integer as an input,\n",
+    "    and returns that value multiplied by two.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return x*2"
    ]
   }
  ],
@@ -333,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
