--- a/lecture/week-6/exercises/copyright.ipynb
+++ b/lecture/week-6/exercises/copyright.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "### copyright.py\n",
     "# New for 2023\n",
     "# Given sample solution code for copyright.py in week 2\n",
@@ -15,11 +16,14 @@
     "# It is ripe for streamlining through functions.\n",
     "\n",
     "# Must select a good default value.\n",
+    "\n",
+    "import helper\n",
+    "\n",
     "while True:\n",
     "\n",
     "    # Date of publication.\n",
     "    year = int(input(\"In what year was the work published? \"))\n",
-    "    while year < 1923:\n",
+    "    while year < 1923: # consider upper bound for year is 2024\n",
     "        print(\"The year input must be a number greater than 1922.\")\n",
     "        year = int(input(\"In what year was the work published? \"))\n",
     "\n",
@@ -86,7 +90,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.1"
   }
  },
