--- a/cold_call.ipynb
+++ b/cold_call.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected student: Angelene\n"
+      "All students have been called. Regenerate list.\n"
      ]
     }
    ],
