--- a/lecture/week-6/week6-problem-set-pointers.ipynb
+++ b/lecture/week-6/week6-problem-set-pointers.ipynb
@@ -32,9 +32,7 @@
      "output_type": "stream",
      "text": [
       "Result of .sort() method: None\n",
-      "Original list after .sort(): [1, 2, 5, 7, 9]\n",
-      "Result of sorted() function: [1, 2, 5, 7, 9]\n",
-      "Original list after sorted(): [5, 2, 9, 1, 7]\n"
+      "Original list after .sort(): [1, 2, 5, 7, 9]\n"
      ]
     }
    ],
@@ -47,8 +45,24 @@
     "\n",
     "#print the result of .sort() method\n",
     "print(\"Result of .sort() method:\", sorted_in_place)  #this will print none\n",
-    "print(\"Original list after .sort():\", my_list)      #this will print the sorted list\n",
-    "\n",
+    "print(\"Original list after .sort():\", my_list)      #this will print the sorted list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of sorted() function: [1, 2, 5, 7, 9]\n",
+      "Original list after sorted(): [5, 2, 9, 1, 7]\n"
+     ]
+    }
+   ],
+   "source": [
     "#reset the list for comparison\n",
     "my_list = [5, 2, 9, 1, 7]\n",
     "\n",
@@ -57,7 +71,7 @@
     "\n",
     "#print the result of sorted() function\n",
     "print(\"Result of sorted() function:\", sorted_new_list)  #this will print the sorted list\n",
-    "print(\"Original list after sorted():\", my_list)         #this will print the original unsorted list\n"
+    "print(\"Original list after sorted():\", my_list)         #this will print the original unsorted list"
    ]
   },
   {
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,17 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The claimant claims the respondent was at fault in the accident.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#legal text\n",
     "legal_text = \"The plaintiff claims the defendant was negligent in the accident.\"\n",
@@ -125,6 +131,26 @@
     "    \"defendant\": \"respondent\",\n",
     "    \"negligent\": \"at fault\"\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('plaintiff', 'claimant'), ('defendant', 'respondent'), ('negligent', 'at fault')])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "replacements.items()"
    ]
   },
   {
@@ -156,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +201,7 @@
     "\n",
     "#replace items in the string based on dictionary key-value pairs\n",
     "for item in replacements:\n",
+    "    # print(item)\n",
     "    legal_text_ex_two = legal_text_ex_two.replace(item, replacements[item])\n",
     "\n",
     "#print the modified legal text\n",
@@ -234,29 +261,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['helper.py', '__pycache__', 'copyright.ipynb']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#simply input the folder name to get contents of a folder in your current working directory\n"
+    "#simply input the folder name to get contents of a folder in your current working directory\n",
+    "os.listdir(\"exercises\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#use slashes / to indicate subfolders\n"
+    "#use slashes / to indicate subfolders\n",
+    "os.listdir(\"exercises/another_subfolder\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['week-5', 'week-3', 'week-2', 'week-4', 'week-1', 'week-6']\n",
+      "['lecture', 'getting-started-codespaces.md', 'labs', 'remote-vs-local-infographic.png', 'images', 'README.md', '.git', 'recordings.md', 'style-guide.md', 'cold_call.ipynb']\n",
+      "['Lab_1.ipynb', 'IMG_2468.jpg', 'warmup.md']\n"
+     ]
+    }
+   ],
    "source": [
-    "#you can go up a level to access a folder from PARENT directory (../)\n"
+    "#you can go up a level to access a folder from PARENT directory (../)\n",
+    "print(os.listdir(\"../\"))\n",
+    "\n",
+    "print(os.listdir(\"../../\"))\n",
+    "\n",
+    "print(os.listdir(\"../../labs/week-1/\"))\n"
    ]
   },
   {
@@ -268,11 +334,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#check if \"_modified\" path exists"
+    "#check if \"_modified\" path exists\n",
+    "os.path.exists(\"../../labs/week-1/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.exists(\"exercises_redacted\")"
    ]
   },
   {
@@ -284,11 +382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#check if \"_modified\" path exists, if it doesn't, create it"
+    "#check if \"_modified\" path exists, if it doesn't, create it\n",
+    "if not os.path.exists(\"exercises_redacted\"):\n",
+    "    os.makedirs(\"exercises_redacted\")"
    ]
   },
   {
@@ -300,14 +400,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../../labs/week-1\n",
+      "True\n",
+      "../../labs/week-2\n",
+      "True\n",
+      "../../labs/week-3\n",
+      "True\n",
+      "../../labs/week-4\n",
+      "True\n",
+      "../../labs/week-5\n",
+      "True\n",
+      "../../labs/week-10\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# demo with accessing different weeks in lab folder\n",
     "\n",
     "#create a list of target folders\n",
-    "target_folders = [\"week-1\",\"week-2\",\"week-3\",\"week-4\",\"week-5\"]"
+    "target_folders = [\"week-1\",\"week-2\",\"week-3\",\"week-4\",\"week-5\",\"week-10\"]\n",
+    "\n",
+    "for target in target_folders:\n",
+    "    path = os.path.join(\"../../labs\",target)\n",
+    "    print(path)\n",
+    "    print(os.path.exists(path))"
    ]
   },
   {
@@ -335,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
