update copyright example

--- a/lecture/week-6/exercises/copyright.ipynb
+++ b/lecture/week-6/exercises/copyright.ipynb
@@ -21,21 +21,27 @@
     "\n",
     "while True:\n",
     "\n",
-    "    # Date of publication.\n",
-    "    year = int(input(\"In what year was the work published? \"))\n",
-    "    while year < 1923: # consider upper bound for year is 2024\n",
-    "        print(\"The year input must be a number greater than 1922.\")\n",
-    "        year = int(input(\"In what year was the work published? \"))\n",
+    "    ## APPLYING HELPER FUNCTION ##\n",
+    "    year = helper.validate(\"In what year was the work published? \",1923,2024)\n",
+    "    month = helper.validate(\"In what month was the work published? \",1,12)\n",
+    "    day = helper.validate(\"On what day of the month was the work published? \",1,31)\n",
+    "    \n",
+    "    ## ORIGINAL ##\n",
+    "    # # Date of publication.\n",
+    "    # year = int(input(\"In what year was the work published? \"))\n",
+    "    # while year < 1923: # consider upper bound for year is 2024\n",
+    "    #     print(\"The year input must be a number greater than 1922.\")\n",
+    "    #     year = int(input(\"In what year was the work published? \"))\n",
     "\n",
-    "    month = int(input(\"In what month was the work published? \"))\n",
-    "    while month > 12 or month < 1:\n",
-    "        print(\"The month input must be a number between 1 and 12.\")\n",
-    "        month = int(input(\"In what month was the work published? \"))\n",
+    "    # month = int(input(\"In what month was the work published? \"))\n",
+    "    # while month > 12 or month < 1:\n",
+    "    #     print(\"The month input must be a number between 1 and 12.\")\n",
+    "    #     month = int(input(\"In what month was the work published? \"))\n",
     "\n",
-    "    day = int(input(\"On what day of the month was the work published? \"))\n",
-    "    while day > 31 or day < 1:\n",
-    "        print(\"The day input must be a number between 1 and 31.\")\n",
-    "        day = int(input(\"On what day of the month was the work published? \"))\n",
+    "    # day = int(input(\"On what day of the month was the work published? \"))\n",
+    "    # while day > 31 or day < 1:\n",
+    "    #     print(\"The day input must be a number between 1 and 31.\")\n",
+    "    #     day = int(input(\"On what day of the month was the work published? \"))\n",
     "\n",
     "    # Other questions.\n",
     "    notice_in  = input(\"Was notice of copyright given? \")\n",
