--- a/lecture/week-6/exercises/copyright.ipynb
+++ b/lecture/week-6/exercises/copyright.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In Public Domain\n",
+      "\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "### copyright.py\n",
