--- a/labs/week-6/lab_6.ipynb
+++ b/labs/week-6/lab_6.ipynb
@@ -9,12 +9,15 @@
     "\n",
     "### Agenda\n",
     "### 0. We are tired. Programming is a lot of work, but the end is nigh.\n",
+    "### NEXT WEEK (LAB 7) IS THE LAST LAB. DON'T COME TO LAB 10/23~.\n",
     "<br>\n",
     "\n",
     "### 1. Homework and Functions Grievances\n",
     "<br>\n",
     "\n",
-    "### 2. Functions -> congressize.ipynb. Code-together warning. Pain will be inflicted.\n",
+    "### 2. Functions -> congressize.ipynb. (Code-together exercise)\n",
+    "### Everyone have an empty codespace open please.\n",
+    "### Also download word_list.txt in the lab folder on Canvas.\n",
     "\n"
    ]
   },
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,43 +104,97 @@
     "# 2. Return a phrase that consists of words whose first letters correspond to the letters in the acronym provided.\n",
     "# 3. (Implied) Use functions to implement.\n",
     "\n",
-    "def congressize():\n",
+    "def congressize(acronym, char_count):\n",
     "\n",
-    "    return"
+    "    word_list = ['The']\n",
+    "        # acronym == string\n",
+    "        # 'CLOUD'\n",
+    "    for letter in acronym:\n",
+    "        # find a word that starts with the letter in the dictionary/word_list file  \n",
+    "        word_list.append(random_word(letter, char_count))\n",
+    "\n",
+    "    word_list.append('Act')\n",
+    "\n",
+    "    return ' '.join(word_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cool. but \"finging\" a word from an acronym is easier said than done. How do?\n",
     "# random_word()\n",
-    "def random_word():\n",
+    "import random\n",
     "\n",
+    "def random_word(letter, target_chars=7):\n",
+    "    words = open('word_list.txt').read().split('\\n')\n",
+    "    words_with_initial = []\n",
+    "    \n",
+    "    for word in words:\n",
+    "        ### find all the words that start with letter (passed as a parameter)\n",
+    "        if word.startswith(letter):\n",
+    "            words_with_initial.append(word)\n",
     "\n",
-    "    return "
+    "    short_words = []\n",
+    "\n",
+    "    for i in words_with_initial:\n",
+    "        if len(i) <= target_chars:\n",
+    "            short_words.append(i)\n",
+    "\n",
+    "    return random.choice(short_words)\n",
+    "\n",
+    "# candidate = random.choice(words_with_initial)\n",
+    "# while len(candidate) > target_chars:\n",
+    "#   candidate = random.choice(words_with_initial)\n",
+    "# return candidate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shilla mosquito impennes lingwort edental Act\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Congressize here\n",
     "# This is what the Senator/Representative said\n",
-    "acronym = ''\n",
+    "acronym = 'smile'\n",
+    "length = 8\n",
     "\n",
-    "# Run congressize\n",
-    "congressize(acronym)\n"
+    "# Run congressize.\n",
+    "give_congressmember = congressize(acronym, 8)\n",
+    "\n",
+    "# Print congressize.\n",
+    "print(give_congressmember)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
