--- a/cold_call.ipynb
+++ b/cold_call.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "other error\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cold_call.ipynb\n",
     "# created by Rachel Orey, Fall 2024\n",
@@ -37,22 +29,20 @@
     "    try:\n",
     "        for absent_student in absent_students:\n",
     "            first_names.remove(absent_student)\n",
-    "        else:\n",
-    "            print(\"No absent students reported.\")\n",
     "    except:\n",
     "        print(\"other error\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All students have been called. Regenerate list.\n"
+      "Selected student: Li-Wen\n"
      ]
     }
    ],
@@ -75,7 +65,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
