--- a/lecture/week-7/exercises/litigation_scraper.ipynb
+++ b/lecture/week-7/exercises/litigation_scraper.ipynb
@@ -11,38 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No more pages to scrape or error occurred: Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//li[@class='paginate_button page-item'][@id='bottomBtn_btn9']/a\"}\n",
-      "  (Session info: chrome=129.0.6668.90); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF79653B095+29557]\n",
-      "\t(No symbol) [0x00007FF7964AFA50]\n",
-      "\t(No symbol) [0x00007FF79636B56A]\n",
-      "\t(No symbol) [0x00007FF7963BF695]\n",
-      "\t(No symbol) [0x00007FF7963BF8EC]\n",
-      "\t(No symbol) [0x00007FF79640B777]\n",
-      "\t(No symbol) [0x00007FF7963E71CF]\n",
-      "\t(No symbol) [0x00007FF79640851C]\n",
-      "\t(No symbol) [0x00007FF7963E6F33]\n",
-      "\t(No symbol) [0x00007FF7963B116F]\n",
-      "\t(No symbol) [0x00007FF7963B22D1]\n",
-      "\tGetHandleVerifier [0x00007FF79686C96D+3378253]\n",
-      "\tGetHandleVerifier [0x00007FF7968B8497+3688311]\n",
-      "\tGetHandleVerifier [0x00007FF7968AD1CB+3642539]\n",
-      "\tGetHandleVerifier [0x00007FF7965FA6B6+813462]\n",
-      "\t(No symbol) [0x00007FF7964BAB5F]\n",
-      "\t(No symbol) [0x00007FF7964B6B74]\n",
-      "\t(No symbol) [0x00007FF7964B6D10]\n",
-      "\t(No symbol) [0x00007FF7964A5C1F]\n",
-      "\tBaseThreadInitThunk [0x00007FFF9B0D7374+20]\n",
-      "\tRtlUserThreadStart [0x00007FFF9B35CC91+33]\n",
-      "\n"
+      "No more pages to scrape or error occurred: Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//li[@class='pagin\n"
      ]
     },
     {
@@ -307,7 +283,7 @@
     "display(all_data)\n",
     "\n",
     "# Save the data to a CSV file\n",
-    "df.to_csv(\"litigation.csv\", index=False)\n",
+    "all_data.to_csv(\"litigation.csv\", index=False)\n",
     "\n",
     "# Close the Selenium driver\n",
     "driver.quit()"
