--- a/cold_call.ipynb
+++ b/cold_call.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "other error\n"
+     ]
+    }
+   ],
    "source": [
     "# cold_call.ipynb\n",
     "# created by Rachel Orey, Fall 2024\n",
@@ -35,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected student: Li-Wen\n"
+      "Selected student: Kelina\n"
      ]
     }
    ],
