--- a/lecture/week-8/warm-up.ipynb
+++ b/lecture/week-8/warm-up.ipynb
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Prepare for trial with strong evidence.'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def evaluate_case(case_type: str, settlement_offer: float = 0.0, strong_evidence: bool = False) -> str:\n",
     "\n",
@@ -45,6 +56,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Write the function signature for a function that converts Celsius to Fahrenheit.**\n",
     "It takes one argument (temperature in Celsius) and returns the temperature in Fahrenheit.\""
@@ -55,7 +71,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def celsius_to_fahrenheit(celsius: float) -> float:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,15 +90,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_legal_fees(hours_worked: list[float], hourly_rate: float) -> float:\n",
+    "    \n",
+    "    total_fees = 0\n",
+    "     \n",
+    "    for hour in hours_worked:\n",
+    "        total_fees += hour*hourly_rate\n",
+    "\n",
+    "    return total_fees\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hours = [5,6,7]\n",
+    "\n",
+    "calculate_legal_fees(hours,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 7, 5, 6, 7, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hours * 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "108"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "hours = np.array([5, 6, 7])\n",
+    "sum(hours * 6)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
