--- a/labs/week-7/Lab_7.ipynb
+++ b/labs/week-7/Lab_7.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<img src=\"housing.jpeg\" alt=\"housing\" width=\"800\"/>\n",
     "\n",
     "# 2. Functions Review: Houses\n",
     "\n",
@@ -60,7 +60,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pseudocode here."
+    "# Pseudocode for housing here.\n",
+    "## Library will be called housing.py\n",
+    "\n",
+    "# Summary:\n",
+    "# Know what your input/data ais\n",
+    "# Know where you need to end up\n",
+    "# Fill in the gaps.\n",
+    "\n",
+    "# FX1: Get the data into your program\n",
+    "# Accept a filename\n",
+    "# return a pandas DataFrame\n",
+    "\n",
+    "# FX2: Clean the data / turn it into something more manipulble\n",
+    "# Accept a dataframe\n",
+    "# Return a dataframe\n",
+    "\n",
+    "# Goal 1: FX3: Returning some summary statistics\n",
+    "# Goal 2: FX4: Displaying charts/visuals\n",
+    "\n",
+    "# FX5: function that runs all of the above\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![daddy](daddyAI.png)\n",
+    "\n",
+    "# 3. The brave new world of AI assisted programming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coding time_elapsed with ChatGPT"
    ]
   },
   {
@@ -78,6 +115,30 @@
     "# This Markdown is Intentionally Left Blank\n",
     "# This Markdown is Intentionally Left Blank\n",
     "# This Markdown is Intentionally Left Blank\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'clean_data' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mhousing\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mhousing\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhouse.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/workspaces/Fall-2024/labs/week-7/housing.py:47\u001b[0m, in \u001b[0;36mshow\u001b[0;34m(csvfile)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mshow\u001b[39m(csvfile):\n\u001b[1;32m     46\u001b[0m     rawdata \u001b[38;5;241m=\u001b[39m read_data(csvfile)\n\u001b[0;32m---> 47\u001b[0m     clean_data \u001b[38;5;241m=\u001b[39m \u001b[43mclean_data\u001b[49m(rawdata)\n\u001b[1;32m     48\u001b[0m     give_summary_stats(clean_data)\n\u001b[1;32m     49\u001b[0m     visualize_data(clean_data)\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: cannot access local variable 'clean_data' where it is not associated with a value"
+     ]
+    }
+   ],
+   "source": [
+    "import housing\n",
+    "\n",
+    "housing.show('house.csv')"
    ]
   },
   {
@@ -148,34 +209,52 @@
     "# Identify and examine the data\n",
     "# Clean the data (take a subset of rows and columns)\n",
     "# Visualize with the data\n",
-    "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     " \n",
-    "\n",
     "# setting the dimensions of the plot\n",
     "# Examine the data and return summary statistics\n",
-    "fig, ax = plt.subplots(figsize=(30, 5))\n",
-    "\n",
     "\n",
     "# Do some data cleaning with arbitrary logic.\n",
     "# Read the data\n",
-    "housedata = pd.read_csv('house.csv')\n",
-    "# Exclude some states\n",
-    "# Exclude some zipcodes\n",
-    "# Rename some places . . . etc\n",
-    "# Give some summary statistics\n",
-    "avg_price_by_city = housedata.groupby('State').mean('Price')\n",
+    "# a Function that takes in the name/address of a .csv file \n",
+    "# and turns it into a Pandas dataframe and returns it\n",
+    "def read_data(csvfile):\n",
+    "    raw_data_dataframe = pd.read_csv(csvfile)\n",
+    "    return raw_data_dataframe\n",
     "\n",
+    "def clean_data(raw_data_dataframe):\n",
+    "    # Exclude some states\n",
+    "    # Exclude some zipcodes\n",
+    "    # Rename some places . . . etc\n",
+    "    return clean_dataframe\n",
+    "\n",
+    "def give_summary_stats(clean_dataframe):\n",
+    "    # Give some summary statistics\n",
+    "    avg_price_by_city = housedata.groupby('State').mean('Price')\n",
+    "    # Other summaries\n",
+    "    print(avg_price_by_city)\n",
+    "    return null\n",
     "\n",
     "# Do some visualizations (each should be a function)\n",
+    "def visualize_data(clean_dataframe, chart_type='bar'):\n",
+    "\n",
     "# Bar\n",
     "# Scatter/Bubble\n",
     "# Histogram\n",
-    "barplot = sns.barplot(data=avg_price_by_city, x='State', y='Price', ax=ax)\n",
+    "    fig, ax = plt.subplots(figsize=(30, 5))\n",
+    "    barplot = sns.barplot(data=avg_price_by_city, x='State', y='Price', ax=ax)\n",
+    "    barplot.set_xticklabels(barplot.get_xticklabels(), rotation=45)\n",
+    "    return null\n",
     "\n",
-    "barplot.set_xticklabels(barplot.get_xticklabels(), rotation=45)"
+    "def show(csvfile):\n",
+    "    rawdata = read_data(csvfile)\n",
+    "    clean_data = clean_data(rawdata)\n",
+    "    give_summary_stats(clean_data)\n",
+    "    visualize_data(clean_data)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
